2008-01-01  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/generic/pt-mutex-timedlock.c
	(__pthread_mutex_timedlock_internal): Add additional asserts.
	[! NDEBUG]: Keep MUTEX->OWNER up to date.
	* sysdeps/generic/pt-mutex-trylock.c (__pthread_mutex_trylock):
	Add additional asserts.
	[! NDEBUG]: Keep MUTEX->OWNER up to date.
	* sysdeps/generic/pt-mutex-unlock.c (__pthread_mutex_unlock): Add
	additional asserts.
	[! NDEBUG]: Keep MUTEX->OWNER up to date.

2007-12-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (AM_CPPFLAGS): Add "-std=gnu99 -Wall -g -O3".

	* sysdeps/l4/pt-block.c (__pthread_block): Remove unused variable
	err.

	* pthread/pt-join.c (pthread_join): Cast argument to
	pthread_cleanup_push to avoid warning.

2007-12-13  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/l4/hurd/pt-thread-halt.c: Include <hurd/exceptions.h>.
	(__pthread_thread_halt): Call exception_page_cleanup.

2007-12-12  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/l4/pt-block.c (__pthread_block): Clear the acceptor.
	Improve debugging output.
	* sysdeps/l4/pt-wakeup.c (__pthread_wakeup): Load an empty message.
	Improve debugging output.

2007-12-04  Neal H. Walfield  <neal@gnu.org>

	Remove exception threads.  Replace with support for activations.
	* sysdeps/l4/hurd/pt-sysdep.h (PTHREAD_SYSDEP_MEMBERS): Remove
	fields exception_handler_stack and exception_handler_sp.  Add
	field exception_page.
	* sysdeps/l4/hurd/pt-thread-alloc.c (__pthread_thread_alloc):
	Allocate a page for THREAD->EXCEPTION_PAGE, not
	THREAD->EXCEPTION_HANDLER_STACK.
	* sysdeps/l4/hurd/ia32/pt-setup.c: Include <hurd/thread.h> and
	<hurd/exceptions.h>.
	(__pthread_setup): Remove code dealing with the exception thread.
	Set up the exception page.
	* sysdeps/l4/hurd/pt-thread-start.c (__pthread_thread_start):
	Remove code dealing with the exception thread.  Update to use new
	rm_thread_exregs interface.  Also set the thread's exception page.
	* sysdeps/l4/hurd/pt-thread-halt.c (__pthread_thread_halt): Remove