@@ -1,3 +1,8 @@
+2008-01-17  Neal H. Walfield  <neal@gnu.org>
+
+	* sysdeps/l4/hurd/pt-block.c: New file.
+	* sysdeps/l4/hurd/pt-wakeup.c: Likewise.
+
 2008-01-01  Neal H. Walfield  <neal@gnu.org>
 
 	* sysdeps/generic/pt-mutex-timedlock.c
